full changes in backend

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:Dinesh777@localhost:5432/TravelNudge
+DATABASE_URL=postgresql://postgres:Dinesh777@localhost:5432/SampleDB1
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
