database is neonDB

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:Dinesh777@localhost:5432/SampleDB1
+DATABASE_URL=postgresql://neondb_owner:npg_S8RAgxpk2Lec@ep-bold-sea-a11kkb6t-pooler.ap-southeast-1.aws.neon.tech/TravelNudgeDB1?sslmode=require&channel_binding=require
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
