--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL=postgresql://neondb_owner:npg_S8RAgxpk2Lec@ep-bold-sea-a11kkb6t-poo
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+GOOGLE_GEMINI_API_KEY=AIzaSyAsRjQoT7kpRcsbhikYIcSPJxQ0PQPALDs
