--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://neondb_owner:npg_S8RAgxpk2Lec@ep-bold-sea-a11kkb6t-pooler.ap-southeast-1.aws.neon.tech/TravelNudgeDB1?sslmode=require&channel_binding=require
+DATABASE_URL=sqlite:///./travelnudge.db
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
